# March-Madness-Spreads-League

./: .gitignore  405_TROUBLESHOOTING_GUIDE.md  FIX_SUMMARY.md  HEAD_REQUEST_FIX.md  LEADERBOARD_DEBUG_GUIDE.md  LICENSE  LIVE_SCORE_MATCHING_ISSUE.md  README.md  VANDERBILT_ALABAMA_FIX_COMPLETE.md  VANDY_ALABAMA_TEST_RESULTS.md  VIRGINIA_LOUISVILLE_DIAGNOSIS.md  firestore.rules  lock_of_the_week_analysis.md  package-lock.json  package.json  requirements.txt  server.js  todo_list.md  vite.config.js
.github/workflows/: auto-resolve-games.yml
backups/: IMPLEMENTATION_COMPLETE.md  backup_database.py  restore_instructions.md  scoring_fix_validation_2025-09-02_15-02-31.txt  scoring_validation_report_2025-09-02_15-03-58.txt  verify_backup.py
march-madness-frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js
march-madness-frontend/src/: App.css  App.jsx  api.js  config.js  firebase.js  index.css
march-madness-frontend/src/components/: UserPicksModal.jsx
march-madness-frontend/src/pages/: AdminGames.jsx  AdminTiebreakers.jsx  AdminUserPicks.jsx  ForgotPassword.jsx  Home.jsx  Live.jsx  (+5 more)
march-madness_backend/: main.py
march_madness_backend/: .env.example  .gitignore  .vercelignore  CREDENTIALS.md  SCALING_GUIDE.md  auth.py  db.py  firestore_client.py  main.py  pyproject.toml  requirements.txt  start.sh  test_simple_auth.py
march_madness_backend/mmvenv/: pyvenv.cfg
scripts/: make_admin.py  setup-firestore-usage-alerts.sh
scripts/alert-policies/: firestore-reads-25k.json  firestore-writes-10k.json
src/: App.jsx  config.js
(+2 files in other folders)
